footer html/css complete(for now)

--- a/Index.html
+++ b/Index.html
@@ -50,18 +50,16 @@
 
 <footer>
     <h5 id="Contact">Contact Me</h5>
-    <ul class="FooterUL">
-        <li>
+    <ul>
+        <li class="FooterLI">
             <P>289-251-4226</P>
         </li>
-        <li>
+        <li class="FooterLI">
             <p>austinluislanger@gmail.com</p>
         </li>
-        <li>
+        <li class="FooterLI">
             <a href="https://github.com/AustinLanger?tab=repositories">GitHub</a>
         </li>
     </ul>
-
-
 
 </footer>
